ChangeLog file for Endian libencloud

libencloud 0.X.Y:
	- vpn: 'client' wasn't being dumped
	- test: scripts/vpncli.sh extensions for *ECE testing

libencloud 0.6.1 (15/04/2014):
	- custom ProxyFactory to avoid proxying localhost requests;
	  handle global proxy settings in core [CONNECT-106]
	- auth: typeFromQt(), typeToQt(), toString()
	- proxy: toString()
	- vpn: improved process failure handling; error showing Proxy + UDP not allowed;
	  added parsing from file to VpnConfig and refactoring [CONNECT-121]
	- test: added sample SECE client

libencloud 0.6 (02/04/2014):
	- major rewrite and fixes
	- renaming s/ece/libencloud
	- API: new fully async APIs

libece 0.5 (27/01/2014):
	- API: ECE-specific extensions (ECE_TYPE_SECE defined on win32)
	- SB: remove curly brackets around Qt's uuid representation
	- op_cert: CN based on CSR template value if provided (user can give a label)
	- rename: {cacert,cert,key}1 => init_{ca,cert,key},
	  {cacaert,cert,key}2 => op_{ca,cert,key}
	- bindings: fix typo in sb_conf_get_vpn_ip()
	- sbsim/contrib: produce and test OpenVPN server; no need to modify opeensl.conf by
	  passing policy to openssl ca
	- config: fix debug messages not being displayed; fix timeout not configurable
	- test: retries on failure

libece 0.4 (31/10/2013):
	- new host names: initialization-host, operation-host
	- ignore errors about not matching certificate/hostname
	- set a different host name for the command getConfiguration
	- bindings: use distutils for build/install; added relative include and
	  library dirs
	- api: return ECE_RC_INVALIDCERT upon certification validation failures;
	  return ECE_RC_BADCONFIG upon bad configuration (ece.json)
	- logging: log level can be configured at runtime in ece.json (log/lev)
	- sbsim: make certs valid from yesterday to avoid races
	- build: temporarily use qtjson (Yocto TODO)

libece 0.3 (25/09/2013):
	- fix certificate request encoding
	- commands paths changed
	- digest changed to SHA1