@@ -1,8 +1,10 @@
 ChangeLog file for Endian libencloud
 
 libencloud 0.X.Y:
-	- vpn: 'client' wasn't being dumped
-	- test: scripts/vpncli.sh extensions for *ECE testing
+	- conf: user/pass vs x509 auth is configurable
+	- error: new Retry object
+	- vpn: 'client' wasn't being dumped, handle retries
+	- test: scripts/vpncli.sh extensions for *ECE testing; SECE sample wip
 
 libencloud 0.6.1 (15/04/2014):
 	- custom ProxyFactory to avoid proxying localhost requests;
